# evet

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
evet/: cli.py  date.py
evet-web/: Cargo.toml  index.html  style.css
evet-web/src/: main.rs
python/evet/: cli.py  date.py  log.py  utils.py
python/tests/: test_evet.py
src/: date.rs  main.rs
