[tool.poetry]
name = "evet"
version = "0.1.0"
description = ""
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]

[tool.poetry.scripts]
evet = "evet.cli:run"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
